--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -49,7 +49,7 @@ html, body, ul, ol {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+    padding-top: 5%;
 }
 
 .text {
