--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -50,6 +50,8 @@ html, body, ul, ol {
     align-items: center;
     flex-direction: column;
     padding-top: 5%;
+    padding-bottom: 5%;
+    
 }
 
 .text {
@@ -79,6 +81,7 @@ html, body, ul, ol {
     border-radius: 50%;
     border: 7px solid #A6E3E9;
     transition: transform .7s ease-in-out;
+    
 }
 .hero-img:hover {
     transform:  rotate(360deg); 
@@ -88,8 +91,9 @@ html, body, ul, ol {
     justify-content: center;
     text-align: center;
     width: 100%;
-    height: 600px;
+    height: 800px;
     flex-direction: column;
+    padding-bottom: 20%;
 }
 .resume-img-container {
     display: flex;
@@ -320,13 +324,39 @@ p {
 
 @media (max-width: 768px) {
     #navbar {
-        flex-direction: column; /* Stack the items vertically */
+        flex-direction: column; 
+        margin-bottom: 17%;
+        
     }
     .navlist {
         flex-direction: column;
         align-items: center; /* Align items in the center */
+        
     }
     .navlist li {
         margin: 5px 0; /* Reduce margin for list items */
+        
+    }
+    .hero-img-container {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        padding-top: 30%;
+    }   
+    #my-projects{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        width: 100%;
+        height: 600px;
+        background-color: #F5F5F5;
+        flex-direction: column;
+        padding-top: 20%;
+        padding-bottom: 25%;
+    }
+    #hobbies {
+        text-align: center;
+        padding-top: 15%;
+        padding-bottom: 5%;
     }
 }
